--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,7 +158,7 @@ footer {
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400;
-   background-color: #ededed;
+   /* background-color: #ededed; */
 }
 
 .footer{
