--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body{
    font-family: Arial, Helvetica, sans-serif;
 
    margin: 0;
-   background-image: url("/imagenes/humo.webp");
+   background-image: url("/imagenes/humo.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
@@ -163,7 +163,7 @@ footer {
 
 .footer{
    padding: 40px 0;
-   background-image: url("/imagenes/humo.webp");
+   background-image: url("/imagenes/humo.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
