--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,21 +4,27 @@
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
+   
+   
+}
+
+
+
+body{
+   font-family: Arial, Helvetica, sans-serif;
+
+   margin: 0;
+   background-image: url("../imagenes/humo.jpg");
+   background-size: cover;
+   background-position: center;
+   background-attachment: fixed;
 }
 
 
 
 
 /* menu de navegacion */
-body{
-   font-family: Arial, Helvetica, sans-serif;
 
-   margin: 0;
-   background-image: url("/imagenes/humo.jpg");
-   background-size: cover;
-   background-position: center;
-   background-attachment: fixed;
-}
 
 header{
    display: flex;
@@ -163,7 +169,7 @@ footer {
 
 .footer{
    padding: 40px 0;
-   background-image: url("/imagenes/humo.jpg");
+   background-image: url("../imagenes/humo.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
