--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,283 +1,262 @@
 
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: Arial, Helvetica, sans-serif;
    
-   
-}
-
-
-
-body{
-   font-family: Arial, Helvetica, sans-serif;
-
-   margin: 0;
-   background-image: url("../imagenes/humo.jpg");
-   background-size: cover;
-   background-position: center;
-   background-attachment: fixed;
-}
-
-
-
-
-/* menu de navegacion */
-
-
-header{
-   display: flex;
-   height: 80px;
-   background-color:white;
-   justify-content: space-around;
-}
-
-.logo{
-   display: flex;
-   align-items: center;
-   padding: 10px;
-}
-.logo img{
-   height: 100px;
-   margin-left: 50%;
-}
-
-.menu{
-   list-style: none;
-   padding: 10px;
-   background: white;
-   width: 90%;
-   max-width: 1000px;
-   margin: 50;
-}
-.menu li a{
-   text-decoration: none;
-   color: black;
-   padding: 20px;
-   display: block;
-}
-.menu li a:hover{
-   color: antiquewhite;
-}
-.menu li{
-   display: inline-block;
-   text-align: center;
-}
-
-.Contenedor {
-  
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 3% 25% 10% 40%;
-  width: 500px;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
-
-
-
-
-
-/* baner */
-.banner{
-   width: 100%;
-   height: 800px;
-   animation: banner 10s infinite linear alternate;
-   background-size: 100% 100%;
-   position: relative;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-@keyframes banner{
-   0%, 20%{
-       background-image: url(../imagenes/buda1.jpg)
+   *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      
+      
+      
+      
    }
-   25%, 45%{
-       background-image: url(../imagenes/paz2.jpg)
+   .navbar-brand:hover {
+      color: #FFEEDF !important;
    }
-   50%, 70%{
-       background-image: url(../imagenes/imagen\ 1.jpg)
+   
+   .nav-link:hover {
+      color: #FFEEDF !important;
    }
-   75%, 100%{
-       background-image: url(../imagenes/elefante4.jpg)
-   }
-}
-
-
-
-
-
-/* pagina de productos */
-
-.catalogo {
    
-   padding: 5%;
    
-
-}
-
-h1{text-decoration: underline;
-   padding: 30px 60% 30px 45%
-   
-}
-*{
-   box-sizing: border-box;
-}
-body{
-   margin: 0;
-   padding: 0;
-}
-img{
-   width: 100%;
-}
-.row{
-   display: flex;
-   padding: 5px;
-}
-.columnas{
-   flex: 25%;
-   padding: 5%;
-   
-}
-.columnas img{
-   margin-top: 5px;
-}
-
-
-
-
-
-
-
-
-/* pie de pagina */
-
-footer {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   font-weight: 400;
-   /* background-color: #ededed; */
-}
-
-.footer{
-   padding: 40px 0;
-   background-image: url("../imagenes/humo.jpg");
-   background-size: cover;
-   background-position: center;
-   background-attachment: fixed;
-}
-
-.footer .social{
-   text-align: center;
-   padding-bottom: 25px;
-   color: #4b4c4d;
-}
-
-.footer .social a{
-   font-size: 24px;
-   color: inherit;
-   border: 1px solid #ccc;
-   width: 40px;
-   height: 40px;
-   line-height: 38px;
-   display: inline-block;
-   text-align: center;
-   border-radius: 50%;
-   margin: 0 8px;
-   opacity: 0.75;
-}
-
-.footer .social a:hover {
-   opacity: 0.9;
-}
-
-.footer ul{
-   margin-top: 0;
-   padding: 0;
-   list-style: none;
-   font-size: 18px;
-   line-height: 1.6;
-   margin-bottom: 0;
-   text-align: center;
-}
-.footer ul li a {
-   color: inherit;
-   text-decoration: none;
-   opacity: 0.8;
-}
-
-.footer ul li{
-   display: inline-block;
-   padding: 0 15px;
-}
-
-.footer ul li a:hover{
-   opacity: 1;
-}
-
-.footer .copyright{
-   margin-top: 15px;
-   text-align: center;
-   font-size: 13px;
-   color: #aaa
-}
-
-
-
-
-
-
-/* quienes somos texto */
-.quienes-somos {
-   margin: 5%;
-   background-color: antiquewhite;
-   height: 40vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction:column
-}
-
-
-.quienes-somos h2{
-   text-decoration: underline;
-   padding: 0 0 3% 0
-   
-}
-.quienes-somos p{
-   width: 50%;
-}
-
+   body{
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      background-image: url("../imagenes/humo.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     
+   }
+   
+   
+   
+   
+   /* menu de navegacion */
+   
+   
+   header{
+      display: flex;
+      justify-content: space-around;
+   }
+   
+   
+   
+   
+   
+   
+   /* pagina de productos */
+   
+   
+   .container .h2{
+      font-family: 'EB Garamond', serif;
+   }
+
+   
+   
+   
+   
+   
+   /* pie de pagina */
+   
+   footer {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: 400;
+      
+   }
+   
+   .footer{
+      padding: 40px 0;                                                 
+      background-image: url("../imagenes/humo.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+   }
+   
+   .footer .social{
+      text-align: center;
+      padding-bottom: 25px;
+      color: #4b4c4d;
+   }
+   
+   .footer .social a{
+      font-size: 24px;
+      color: inherit;
+      border: 1px solid #ccc;
+      width: 40px;
+      height: 40px;
+      line-height: 38px;
+      display: inline-block;
+      text-align: center;
+      border-radius: 50%;
+      margin: 0 8px;
+      opacity: 0.75;
+   }
+   
+   .footer .social a:hover {
+      opacity: 0.9;
+   }
+   
+   .footer ul{
+      margin-top: 0;
+      padding: 0;
+      list-style: none;
+      font-size: 18px;
+      line-height: 1.6;
+      margin-bottom: 0;
+      text-align: center;
+   }
+   .footer ul li a {
+      color: inherit;
+      text-decoration: none;
+      opacity: 0.8;
+   }
+   
+   .footer ul li{
+      display: inline-block;
+      padding: 0 15px;
+   }
+   
+   .footer ul li a:hover{
+      opacity: 1;
+   }
+   
+   .footer .copyright{
+      margin-top: 15px;
+      text-align: center;
+      font-size: 13px;
+      color: #aaa;
+   }
+   
+   
+   
+   
+   
    
 
-
-/* mapa de pages donde estamos */
-.mapa{
-   display: flex;
-   justify-content: center;
    
-}
+       
+      
+   
+   
+   /* mapa de pages donde estamos */
+   .mapa{
+      display: flex;
+      justify-content: center;
+      
+   }
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   /* descripcion y imagen */
+   .grid-container {
+      display: grid;
+      padding: auto;
+      margin-top: 5%;
+      background-color: #FFEEDF;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      justify-items: center;
+      gap: 100px;
+      
+   }
+   .grid-item h2{
+      font-family: 'EB Garamond', serif;
+      font-weight: 700;
+      font-size: 60px;
+      margin: auto auto auto 35%;
+      
+   }
+   
+   .grid-item p{
+      font-family: 'EB Garamond', serif;
+      font-weight: 400;
+      font-size: 20px;
+      margin: 7%
+   } 
+      /* tutulos */
+   .productos h2{
+      font-family: 'EB Garamond', serif;
+      font-weight: 700;
+      font-size: 60px;
+      padding: 5%;
+   }
+
+   /* catalogo con descripciones */
+   
+   .container .row .card-body .card-title{
+      font-family: 'EB Garamond', serif;
+      font-weight: 500;
+      font-size: 30px;
+   }
+   
+   .container .row .card-body .card-text{
+      font-family: 'EB Garamond', serif;
+      font-weight: 400;
+      font-size: 20px;
+   }
+   
+   .container .row .card-body{
+      background-color: #FFEEDF;
+   }
+   
+   
+   .navbar-nav .nav-link{
+      font-family: 'EB Garamond', serif;
+      font-weight: 500;
+      font-size: 20px;
+   }
+   .navbar-brand {
+      font-family: 'EB Garamond', serif;
+      font-weight: 500;
+      font-size: 20px;
+   }
+   
+   .card .row{
+      background-color: #FFEEDF;
+      border: 0;
+   }
 
 
 
 
+/* animaciones de cartas y imagenes */
+
+   .container .row .card{
+      box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+      transition: all 400ms ease;
+   }
+
+   .container .row .card:hover{
+      box-shadow: 5px 5px 20px rgba(0,0,0,0.9);
+      transform: translateY(-3%);
+   }
 
 
 
+   /* responsive de baners */
 
 
-
-
-
-
-
-
+   
+      @media (max-width: 800px) {
+         .grid-container .grid-item{
+            flex-direction:column;
+           
+         
+         }
+      }
+     
+   
