--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,7 +163,7 @@
    
    /* descripcion y imagen */
    .grid-container {
-      display: grid;
+      display: flex;
       padding: auto;
       margin-top: 5%;
       background-color: #FFEEDF;
@@ -250,13 +250,80 @@
    /* responsive de baners */
 
 
+  .contenedor{
+   display: flex;
+   padding: 0;
+   margin: 10% 0 10% 0;
+   align-items: center;
+   background-color: #FFEEDF;
+  } 
+
+ 
+  .imagen{
+   width: 50%;
+   height: auto;
    
-      @media (max-width: 800px) {
-         .grid-container .grid-item{
-            flex-direction:column;
-           
-         
-         }
+   
+  }
+
+
+  .contenedor h2{
+   font-family: 'EB Garamond', serif;
+   font-weight: 700;
+   font-size: 60px;
+   margin: 0 0 5px 30%
+  }
+
+
+  .contenedor p{
+   font-family: 'EB Garamond', serif;
+      font-weight: 400;
+      font-size: 20px;
+      margin: 3%;
+  }
+  
+  @media (max-width: 700px){
+   .contenedor{
+      display: block;
+   }
+  }
+
+  @media (max-width: 700px){
+   .contenedor .imagen {
+      width: 550px;
+      height: 250px;
+
+   }
+  }
+
+  @media (max-width: 700px){
+   .contenedor h2{
+   justify-content: center;
+   }
+   }
+
+
+   
+     @media (max-width: 375px){
+      .contenedor .imagen {
+         width: 450px;
+         height: 250px;
+   
       }
-     
+     }
    
+     @media (max-width: 375px){
+      .contenedor h2{
+      margin: 40px;
+      }
+      }
+
+      @media (max-width: 375px){
+         .contenedor .baner{
+            width: 250px;
+         height: 250px;
+         margin: 0 0 0 10%;
+         }
+
+
+       
