--- a/CSS/style.css
+++ b/CSS/style.css
@@ -165,7 +165,7 @@
    .grid-container {
       display: flex;
       padding: auto;
-      margin-top: 5%;
+      margin: 10%;
       background-color: #FFEEDF;
       grid-template-columns: 1fr 1fr;
       align-items: center;
@@ -253,7 +253,7 @@
   .contenedor{
    display: flex;
    padding: 0;
-   margin: 10% 0 10% 0;
+   margin: 3% 0 2% 0;
    align-items: center;
    background-color: #FFEEDF;
   } 
